feat: add client

--- a/clients/javascript/templates/configuration.mustache
+++ b/clients/javascript/templates/configuration.mustache
@@ -8,7 +8,7 @@ import { IsomorphicFetchHttpLibrary as DefaultHttpLibrary } from "./http/isomorp
 import { JQueryHttpLibrary as DefaultHttpLibrary } from "./http/jquery";
 {{/jquery}}
 {{/frameworks}}
-import { BaseServerConfiguration } from "./servers{{importFileExtension}}";
+import { BaseServerConfiguration, server1 } from "./servers{{importFileExtension}}";
 import { configureAuthMethods, AuthMethods, AuthMethodsConfiguration } from "./auth/auth{{importFileExtension}}";
 
 export interface Configuration {
@@ -65,6 +65,7 @@ export interface ConfigurationParameters {
  * for each request individually).
  *
  * If a property is not included in conf, a default is used:
+ *    - baseServer: server1
  *    - httpApi: IsomorphicFetchHttpLibrary
  *    - middleware: []
  *    - promiseMiddleware: []
@@ -73,10 +74,8 @@ export interface ConfigurationParameters {
  * @param conf partial configuration
  */
 export function createConfiguration(conf: ConfigurationParameters = {}): Configuration {
-    if (!conf.baseServer) throw new Error("baseServer must be set")
-
     const configuration: Configuration = {
-        baseServer: conf.baseServer,
+        baseServer: conf.baseServer !== undefined ? conf.baseServer : server1,
         httpApi: conf.httpApi || new DefaultHttpLibrary(),
         middleware: conf.middleware || [],
         authMethods: configureAuthMethods(conf.authMethods)
