--- a/clients/javascript/templates/http/servers.mustache
+++ b/clients/javascript/templates/http/servers.mustache
@@ -49,3 +49,9 @@ export class ServerConfiguration<T extends { [key: string]: string }> implements
         return new RequestContext(this.getUrl() + endpoint, httpMethod);
     }
 }
+
+{{#servers}}
+export const server{{-index}} = new ServerConfiguration<{ {{#variables}} "{{name}}": {{#enumValues}}"{{.}}"{{^-last}} | {{/-last}}{{/enumValues}}{{^enumValues}}string{{/enumValues}}{{^-last}},{{/-last}} {{/variables}} }>("{{url}}", { {{#variables}} "{{name}}": "{{defaultValue}}" {{^-last}},{{/-last}}{{/variables}} })
+{{/servers}}
+
+export const servers = [{{#servers}}server{{-index}}{{^-last}}, {{/-last}}{{/servers}}];
